--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="soft_black">#575757</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#919191</color>
+    <color name="light_grey">#EDEDED</color>
+
+
 </resources>
