Commit #7. Добавлена и настроена навигация с bottomNavView

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="green">#4CAF50</color>
     <color name="orange">#D17D00</color>
     <color name="red">#F44336</color>
+    <color name="light_blue">#B6E0F4</color>
+
 
 </resources>
