--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="orange">#D17D00</color>
     <color name="red">#F44336</color>
     <color name="light_blue">#B6E0F4</color>
+    <color name="laser_green">#A0FC24</color>
 
 
 </resources>
