--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -61,7 +61,7 @@
         tools:listitem="@layout/search_item" />
 
     <LinearLayout
-        android:id="@+id/not_found_layout"
+        android:id="@+id/empty_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
