Commit #11. Добавлен splashScreen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red">#F44336</color>
     <color name="light_blue">#B6E0F4</color>
     <color name="laser_green">#A0FC24</color>
+    <color name="grey_blue">#D9E7ED</color>
 
 
 </resources>
