--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="light_blue">#B6E0F4</color>
     <color name="laser_green">#A0FC24</color>
     <color name="grey_blue">#D9E7ED</color>
+    <color name="dark_blue">#9FADB3</color>
 
 
 </resources>
