--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/favourite_constraint_layout"
+    style="@style/CustomConstraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     tools:context=".presentation.favourite.ui.FavouriteFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -35,11 +35,10 @@
 
         <ImageView
             android:id="@+id/image_not_found"
+            style="@style/ImageViewNotFound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:contentDescription="@string/not_found"
-            android:src="@drawable/ic_death_star" />
+            android:contentDescription="@string/not_found" />
 
         <TextView
             android:id="@+id/text_not_found"
@@ -73,19 +72,18 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            style="@style/ImageViewError"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:contentDescription="@string/error"
-            android:src="@drawable/ic_dart_vader" />
+            android:contentDescription="@string/error" />
 
         <TextView
-            android:paddingHorizontal="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:layout_marginTop="24dp"
+            android:paddingHorizontal="8dp"
             android:text="@string/something_went_wrong"
+            android:textAlignment="center"
             android:textSize="20sp" />
 
     </LinearLayout>
